# Dockerfile

./: Dockerfile  main.py  pyproject.toml
